feat: add application versioning and update check
- Implemented a new UpdateGate component to check for application updates on startup.
- Added IPC handler in the Electron main process to retrieve app version and platform information.
- Introduced a method to fetch client policy from the server to determine if an update is required.
- Enhanced the RepairItem and DeviceCategory models to initialize properties with default values.
- Updated the RelayCommand class to support nullable parameters and improved event handling.
- Added a script to generate an ICO file from a PNG logo for application branding.
- Updated the Electron builder configuration to include the new icon and adjust installer settings.
- Modified the package.json to include new scripts for type checking and icon generation.
- Improved the Content Security Policy in index.html for better security practices.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -3,12 +3,17 @@ productName: GadgetBoy POS
 files:
   - dist/**
   - app/electron/**
+extraResources:
+  - from: build/icon.ico
+    to: build/icon.ico
 win:
   target:
     - nsis
+  icon: build/icon.ico
 nsis:
-  oneClick: true
+  oneClick: false
   perMachine: false
   allowToChangeInstallationDirectory: true
   createDesktopShortcut: true
-  #icon: build/icon.ico
+  installerIcon: build/icon.ico
+  uninstallerIcon: build/icon.ico
