--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "author": "",
   "license": "MIT",
   "scripts": {
+    "predev": "npm run generate:icon",
     "dev": "npm run dev:split",
     "vite": "vite --config vite.config.ts",
+    "typecheck:renderer": "tsc -p tsconfig.json --noEmit",
+    "typecheck:main": "tsc -p tsconfig.electron.json --noEmit",
+    "typecheck": "npm run typecheck:renderer && npm run typecheck:main",
+    "generate:icon": "node tools/generate-icon.cjs",
     "electron:buildmain": "tsc --project tsconfig.electron.json",
     "electron": "wait-on tcp:5173 dist-main/app/electron/electron-main.js && electron ./dist-main/app/electron/electron-main.js",
     "dev:split": "cross-env ELECTRON_DISABLE_SECURITY_WARNINGS=true concurrently -n VITE,ELECTRON -c green,magenta \"npm run vite\" \"npm run electron:buildmain && npm run electron\"",
     "dev:nodemon": "wait-on tcp:5173 dist-main/app/electron/electron-main.js && nodemon --watch dist-main/app/electron --ext js --exec \"electron ./dist-main/app/electron/electron-main.js\"",
     "build": "vite build --config vite.config.ts",
+    "predist": "npm run generate:icon && npm run typecheck && npm run electron:buildmain && npm run build",
     "dist": "electron-builder --win nsis"
   },
   "dependencies": {
@@ -34,6 +40,7 @@
     "electron": "^29.0.0",
     "electron-builder": "^24.0.0",
     "nodemon": "^3.1.10",
+    "png-to-ico": "^2.1.8",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.0",
