--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -2,6 +2,8 @@ appId: com.gadgetboy.pos
 productName: GadgetBoy POS
 # Keep the installer name predictable on GitHub Releases (no folder digging).
 artifactName: 'GadgetBoy-POS-Setup-${version}.${ext}'
+directories:
+  output: release
 files:
   - dist/**
   - app/electron/**
