fix: packaged app entrypoint (v0.1.2)

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -6,7 +6,7 @@ directories:
   output: release
 files:
   - dist/**
-  - app/electron/**
+  - dist-main/app/electron/**
 extraResources:
   - from: build/icon.ico
     to: build/icon.ico
