--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gadgetboy-pos",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Minimal desktop POS for tech repair shop (Electron + Vite + React + TS)",
-  "main": "app/electron/electron-main.ts",
+  "main": "dist-main/app/electron/electron-main.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Mattstechwisdom/GB-POS.git"
