ci: allow publishing to selected tag

--- a/.github/workflows/build-windows-installer.yml
+++ b/.github/workflows/build-windows-installer.yml
@@ -55,7 +55,7 @@ jobs:
         if: ${{ (github.event_name == 'push') || (github.event_name == 'workflow_dispatch' && inputs.publish_release) }}
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name }}
+          tag_name: ${{ github.event_name == 'workflow_dispatch' && inputs.ref || github.ref_name }}
           files: |
             release/*.exe
             release/*.yml
