--- a/.github/workflows/build-windows-installer.yml
+++ b/.github/workflows/build-windows-installer.yml
@@ -14,6 +14,17 @@ on:
         default: false
         type: boolean
   push:
+    branches:
+      - main
+    paths:
+      - '.github/workflows/**'
+      - 'app/**'
+      - 'src/**'
+      - 'electron-builder.yml'
+      - 'package.json'
+      - 'package-lock.json'
+      - 'tsconfig*.json'
+      - 'vite.config.ts'
     tags:
       - 'v*'
 
@@ -52,7 +63,7 @@ jobs:
             release/*.blockmap
 
       - name: Publish to GitHub Release (tag builds only)
-        if: ${{ (github.event_name == 'push') || (github.event_name == 'workflow_dispatch' && inputs.publish_release) }}
+        if: ${{ (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')) || (github.event_name == 'workflow_dispatch' && inputs.publish_release) }}
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.event_name == 'workflow_dispatch' && inputs.ref || github.ref_name }}
