--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,14 @@ jobs:
       - name: Typecheck + Build + Dist
         run: npm run dist -- --publish never
 
+      - name: Create "Update" installer alias
+        shell: pwsh
+        run: |
+          $setup = Get-ChildItem -Path release -Filter 'GadgetBoy-POS-Setup-*.exe' | Sort-Object LastWriteTime -Descending | Select-Object -First 1
+          if (-not $setup) { throw 'Setup installer not found in release/*.exe' }
+          $updateName = $setup.Name -replace '^GadgetBoy-POS-Setup-', 'GadgetBoy-POS-Update-'
+          Copy-Item -Force $setup.FullName (Join-Path $setup.DirectoryName $updateName)
+
       - name: List release artifacts
         run: |
           echo "Release folder contents:"
