--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gadgetboy-pos",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Minimal desktop POS for tech repair shop (Electron + Vite + React + TS)",
   "main": "app/electron-main.js",
   "repository": {
@@ -23,7 +23,8 @@
     "dev:nodemon": "wait-on tcp:5173 dist-main/app/electron/electron-main.js && nodemon --watch dist-main/app/electron --ext js --exec \"electron ./dist-main/app/electron/electron-main.js\"",
     "build": "vite build --config vite.config.ts",
     "predist": "npm run generate:icon && npm run typecheck && npm run electron:buildmain && npm run build",
-    "dist": "electron-builder --win nsis"
+    "dist": "electron-builder --win nsis",
+    "changelog": "node tools/generate-patch-notes.js"
   },
   "dependencies": {
     "asar": "^3.2.0",
